# graphics-2017

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: fragment_shader.glsl  g_buffer_fragment_shader.glsl  g_buffer_vertex_shader.glsl  output_g_buffer_fragment_shader.glsl  output_g_buffer_vertex_shader.glsl  res_fragment_shader.glsl  res_vertex_shader.glsl  shadow_map_fragment_shader.glsl  shadow_map_vertex_shader.glsl  vertex_shader.glsl
src/: DirectionalLight.cpp  DirectionalLight.h  MainView.cpp  MainView.h  Object3D.cpp  Object3D.h  PointLight.cpp  PointLight.h  controls.cpp  controls.hpp  load_shaders.cpp  load_shaders.h  main.cpp
task-01/: CMakeLists.txt
task-01/resources/shaders/: fragment-shader.glsl  vertex-shader.glsl
task-01/shaders/: fragment-shader.glsl
task-01/src/: MainView.cpp  MainView.h  MandelbrotGLCanvas.cpp  MandelbrotGLCanvas.h  ShadersLoader.cpp  ShadersLoader.h  main.cpp
